examples/test/testpolicy9299.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9299
  namespace: namespace168
spec:
  podSelector:
    matchLabels:
      key10: value4
      key39: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value30
          key3: value36
      podSelector:
        matchLabels:
          key17: value40
